fix alignment and color

--- a/public/argon/css/argon.css
+++ b/public/argon/css/argon.css
@@ -12214,6 +12214,10 @@ a.text-darker:focus {
     color: rgba(255, 255, 255, 0.5) !important;
 }
 
+.text-recommend {
+    color: rgb(128, 128, 0) !important;
+}
+
 .text-hide {
     font: 0/0 a;
 
